# template-repo

./: .gitignore  LICENSE  template.tar
main/: main.cpp
template/: CMakeLists.txt
